sjengida/g1/HandlePtell
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/HandlePtell/src/partner.c:558:20: error: use of undeclared identifier 'off_41C0B0'
if ( !memcmp( v2, &off_41C0B0, 3uLL) ) 
                   ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/HandlePtell/src/partner.c:567:23: error: use of undeclared identifier 'off_41C0B0'
puts( ( const char *)&off_41C0B0 + 4); 
                      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/HandlePtell/src/partner.c:636:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/HandlePtell/src/partner.c:830:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/HandlePtell/src/obj/partner.o] Error 1
